===================
+ Explicitly targeting also .NET Framework 4.6.
- Removing P/Invoke calls for special functions, whose entry points are mocked by the JIT compiler because these
  were not supported in all cases.

* KGySoft.Drawing.Imaging namespace
===================================
* GifEncoder class: Improved quality when AnimatedGifConfiguration.AllowDeltaFrames property is true.
- BitmapDataExtensions class: Fixing blending of DrawInto/BeginDrawInto/DrawIntoAsync methods if target
  is a custom IReadWriteBitmapData implementation.


~~~~~~~~~
! v6.1.0:
~~~~~~~~~

- Common changes:
=================
- Using unified entry points on Windows for P/Invoke calls both for .NET Framework and .NET/Core platforms. This
  helps to avoid issues when a .NET Framework build is executed on .NET/Core (should not occur when using package
  references but may happen when developing VisualStudio extensions).

+ KGySoft.Drawing namespace:
============================
+ ImageExtensions class:
  + New SaveAsHighColorGif methods

! KGySoft.Drawing.Imaging namespace:
====================================
! IBitmapDataRow interface:
  ! New Width property. This is a breaking change only if you have custom implementations for this interface.
    It simply exposes the Width property of the owner IBitmapData instance.
  ! New Size property. This is a breaking change only if you have custom implementations for this interface.
    It simply exposes the RowSize property of the owner IBitmapData instance.
* GifEncoder:
  + New BeginEncodeAnimation and EndEncodeAnimation methods
  + New EncodeAnimationAsync method (.NET Framework 4.0 and above)
  + New BeginEncodeImage and EndEncodeImage methods
  + New EncodeImageAsync method (.NET Framework 4.0 and above)
  + New EncodeHighColorImage/BeginEncodeHighColorImage/EndEncodeHighColorImage methods
  + New EncodeHighColorImageAsync method (.NET Framework 4.0 and above)